Spacing and card height fixes

--- a/express/blocks/puf/puf.css
+++ b/express/blocks/puf/puf.css
@@ -43,7 +43,7 @@ main .block.puf .puf-card-container {
 main .block.puf .puf-card {
   border-radius: 20px;
   box-sizing: border-box;
-  padding: 40px 30px;
+  padding: 16px 30px;
   width: 325px;
   background-color: var(--color-white);
 }
@@ -286,9 +286,22 @@ main .block.puf .puf-card-container:has(.recommended) {
   height: auto;
 }
 
+main .block.puf .puf-card .puf-card-banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  border-radius: 20px 20px 0 0;
+}
+
+
 @media (min-width: 900px) {
   main .puf.block {
-    margin-bottom: 100px;
+    margin-bottom: 40px;
   }
 
   main .puf.block .carousel-container {
@@ -342,15 +355,7 @@ main .block.puf .puf-card-container:has(.recommended) {
   }
 
   main .block.puf .puf-card .puf-card-banner {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
     top: -50px;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    border-radius: 20px 20px 0 0;
   }
 
   main .block.puf .puf-card .puf-card-top {
